--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,37 @@
 body {
-  background-color: #ff4136;
+  background-color: #ffffff;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.header {
+}
+
+.navbar {
+}
+
+.navButton {
+  text-decoration: underline;
+  display: inline-block;
+  margin: 5px;
+}
+
+.button {
+  border: 1px solid;
+  border-color: black;
+  display: inline-block;
+  text-align: center;
+  padding: 10px;
+  margin: 5px;
+}
+
+.teambox {
+  border: 1px solid;
+  border-color: black;
+  display: inline-block;
+  margin: 5px;
+  padding: 10px;
 }
