--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,15 @@ ul {
   margin: 5px;
 }
 
+.chosenButton {
+  border: 3px solid;
+  border-color: black;
+  display: inline-block;
+  text-align: center;
+  padding: 10px;
+  margin: 5px;
+}
+
 .teambox {
   border: 1px solid;
   border-color: black;
